#11088 closed bug (fixed)
locating source in Debugger doesn't work anymore.
Reported by: | pulkomandy | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Debugger | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #11160 | |
Platform: | All |
Description
Possibly since the introduction of query-based search of source files, clicking the "click here to locate..." in Debugger doesn't do anything anymore.
I have a volume with queries disabled hosting all my sources. My system volumes has some BFS errors, which may lead to failed queries. But I would expect the file panel to come up despite of this.
Attachments (1)
Change History (6)
comment:1 by , 11 years ago
by , 11 years ago
Attachment: | 11088.patch added |
---|
comment:2 by , 11 years ago
patch: | 0 → 1 |
---|
comment:3 by , 11 years ago
Please see if the attached patch makes any difference to your situation.
Note:
See TracTickets
for help on using tickets.
I can't reproduce this behavior here. In any case, when you click, a background worker is spawned which attempts to perform the actual queries. In case of failure, the volume in question is simply skipped. After said worker completes, it sends a message to the window with the results, which then builds the menu (including an item to locate the file manually). If no results are returned, it falls straight through to the file panel as before. This seems to imply that in your case said worker is either never completing (i.e. hanging inside a query), or hitting an error in an unexpected place such that it never sends a message to the window. Without being able to reproduce it though, I'm not really sure as to where things might be going wrong.