Debugger: Fix #11088.

- When walking through and querying volumes for a missing source file,
  store the error and report it back in the completion message rather
  than exiting the query worker. Otherwise, if something went wrong
  with the queries, it'd potentially occur that we'd never prompt the
  user to locate the file, as the UI would never be notified that
  the background work was complete.